# BebraTensor

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  dot2png.py  init.sh
cmake/: BebraTensorConfig.cmake  BebraTensorConfig.cmake.in  CMakeCache.txt  CTestTestfile.cmake  Makefile  bebra_tensor  bebra_tests  bebra_tests[1]_include.cmake  bebra_tests[1]_tests.cmake  cmake_install.cmake  compile_commands.json
cmake/Testing/Temporary/: CTestCostData.txt
dot/: mnist-8.dot  resnet50-v1-7.dot  small_model.dot
include/bebra/core/: BebraAttr.hpp  BebraColors.hpp  BebraConst.hpp  BebraErr.hpp  BebraGraph.hpp  BebraLog.hpp  BebraNode.hpp  BebraPass.hpp  BebraPassManager.hpp  BebraTensor.hpp  BebraType.hpp
include/bebra/mlir/: MLIRHelpers.hpp  MLIRPrinter.hpp  ModifiedValue.hpp  PassPipelineMLIR.hpp
include/bebra/ops/: BebraFactory.hpp  BebraOperators.hpp  BebraVariant.hpp  BebraVisitor.hpp  CountShapeHelpers.hpp  ops.yaml  ops_gen.rb
include/bebra/ops/ruby_gen/: constants.rb  count_output.rb  generate.rb  helpers.rb  ops.yaml  ops_gen.rb  verifiers.rb
include/bebra/passes/: ShapeInferencePass.hpp
include/mlir/: PassPipelineMLIR.hpp
include/onnx_proto/: onnx.proto3.pb.cc  onnx.proto3.pb.h
src/: BebraAttr.cpp  BebraColors.cpp  BebraGraph.cpp  main.cpp
src/core/: BebraAttr.cpp  BebraColors.cpp  BebraGraph.cpp  BebraPassManager.cpp  BebraTensor.cpp  BebraType.cpp
src/mlir/: MLIRHelpers.cpp  MLIRPrinter.cpp  PassPipelineMLIR.cpp
src/ops/: BebraFactory.cpp  BebraOperators.cpp  CountShapeHelpers.cpp
src/passes/: ShapeInferencePass.cpp
tests/: model_creator.py
tests/creators/: linear_model.py  max_pool.py  small_model.py  small_model2.py  ten_models.py
tests/data/: graph_load.cpp  helpers.hpp  onnx-mlir-checkers.cpp  op_load.cpp
tests/mnist-png/: mnist_load.py
tests/tiny-onnx-mlir-checkers/mlir/: 01_arithmetic.ll
tests/tiny-onnx-mlir-checkers/models/: 02_gemm_classifier.onnx  02_small_model.onnx  03_reshape_matmul_3d.onnx
tests/tiny_onnx/: 01_arithmetic.onnx  01_conv_bn_relu.onnx  03_reshape_matmul.onnx  03_reshape_matmul_3d.onnx  04_pooling_stages.onnx  05_concat_split.onnx  07_depthwise_separable.onnx  08_residual_block.onnx  09_pad_convolution.onnx  10_complex_elementwise.onnx
